--- a/templates/developersPage.html
+++ b/templates/developersPage.html
@@ -1,11 +1,7 @@
-<body style="background-color:black;">
+<body style="display:flex; align-items:center; justify-content:center; background-color:black;">
     <div style="text-align:center; font-family:courier; color:white;">
-        {% block title %}
-        <br><br><br><br><br><br><br><br><br><br>
         <img src="https://cdn-icons-png.flaticon.com/512/4406/4406170.png" width="100px">
         <p style="font-size:50px;">WHATSAPP CONTACTS DOWNLOADER</p>
-        {% endblock %}
-        {% block content %}
         <p style="font-size:20px; font-weight:bold;">The program has been terminated due to:</p>
         <br>
         <pre>{{develMsg}}</pre>
@@ -17,6 +13,5 @@
                 </a>
             </p>
         </div>
-        {% endblock %}
     </div>
 </body>
