--- a/templates/programExitErrorPage.html
+++ b/templates/programExitErrorPage.html
@@ -1,15 +1,11 @@
-<body style="background-color:black;">
+<body style="display:flex; align-items:center; justify-content:center; background-color:black;">
     <div style="text-align:center; font-family:courier; color:white;">
-        {% block title %}
-        <br><br><br><br><br>
         <img src="https://cdn-icons-png.flaticon.com/512/4406/4406170.png" width="100px">
         <p style="font-size:50px;">WHATSAPP CONTACTS DOWNLOADER</p>
-        {% endblock %}
-        {% block content %}
         <p style="font-size:20px; font-weight:bold;">THE PROGRAM HAS BEEN TERMINATED DUE TO:</p>
-        <p style="text-align:left; padding-left:760px; font-size:20px; font-weight:bold;">1. Long loading page time</p>
-        <p style="text-align:left; padding-left:760px; font-size:20px; font-weight:bold;">2. Unresponsive HTML element/elements</p>
-        <p style="text-align:left; padding-left:760px; font-size:20px; font-weight:bold;">3. Disconnected from Whatsapp Web</p>
+        <p style="font-size:20px; font-weight:bold;">1. Long loading page time</p>
+        <p style="font-size:20px; font-weight:bold;">2. Unresponsive HTML element/elements</p>
+        <p style="font-size:20px; font-weight:bold;">3. Disconnected from Whatsapp Web</p>
         <br>
         <p style="font-size:25px; font-weight:bold; color:#94d87c;">Make sure your internet connection is secure</p>
         <p style="font-size:25px; font-weight:bold; color:#94d87c;">and your phone battery is full!</p>
@@ -27,6 +23,5 @@
                 </a>
             </p>
         </div>
-        {% endblock %}
     </div>
 </body>
