--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -1,30 +1,46 @@
-<body style="background-color:black;">
+<body style="display:flex; align-items:center; justify-content:center; background-color:black;">
     <div style="text-align:center; font-family:courier; color:white;">
-        {% block title %}
-        <br><br><br><br><br><br><br><br><br><br><br><br>
         <img src="https://cdn-icons-png.flaticon.com/512/4406/4406170.png" width="100px">
         <p style="font-size:50px;">WHATSAPP CONTACTS DOWNLOADER</p>
-        {% endblock %}
-        {% block content %}
-        <p style="font-size:20px; font-weight:bold;">Input your chat filter</p>
-        <form action='/WAContactsDownloader'>
-            <select id="chatFilter" name="chatFilter" style="font-family:courier; font-size:20px; font-weight:bold; color:black; background-color:white">
-                <option value="">None</option>
-                <option value="Unread chats">Unread chats</option>
-                <option value="Contacts">Contacts</option>
-                <option value="Non-contacts">Non-contacts</option>
-                <option value="Groups">Groups</option>
-            </select>
-            <input type="submit" style="font-family:courier; font-size:20px; font-weight:bold; color:black; background-color:#94d87c;">
+        <p style="font-size:20px; font-weight:bold;">This app lets you download</p>
+        <p style="font-size:20px; font-weight:bold;">unsaved contacts in whatsapp!</p><br><br>
+        <form action='/loadingPage'>
+            <!-- <p style="font-family:courier; font-size:20x; font-weight:bold;"">
+                Chat Filters
+                <select onchange="handleChatFilterChange()" id="chatFilter" name="chatFilter" style="font-family:courier; font-size:20px; font-weight:bold; color:black; background-color:white">
+                    <option value="Chats">None</option>
+                    <option value="Unread chats">Unread chats</option>
+                    <option value="Contacts">Contacts</option>
+                    <option value="Non-contacts">Non-contacts</option>
+                    <option value="Groups">Groups</option>
+                </select>
+            </p>
+            <p style="font-family:courier; font-size:20x; font-weight:bold;"">
+                Keyword
+                <input type="search" id="keywordSearch" name="keywordSearch" placeholder="Type a keyword..." value="" style="font-family:courier; font-size:20px; font-weight:bold; color:black;"">
+            </p> -->
+            <input type="hidden" id="chatFilter" name="chatFilter" value="Non-contacts" style="font-family:courier; font-size:20px; font-weight:bold; color:black; background-color:white">
+            <input type="hidden" id="loadingText" name="loadingText" value="Generating QR Code...">
+            <input type="submit" value="START" style="font-family:courier; font-size:30px; font-weight:bold; color:black; background-color:#94d87c;">
         </form>
-        {% endblock %}
     </div>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <div style="text-align:right; font-family:courier; padding-right:50px;">
-        <p style="font-size:20px; font-weight:bold; color:white;">For newcomers >>>
+    <div style="position:absolute; bottom:10; right:40; text-align:center; font-family:courier; color:white;">
+        <p style="font-size:20px; font-weight:bold; text-align:right; color:white;">For newcomers >>>
             <a href="http://127.0.0.1:5000/tutorialPage">
                 <button type="button" style="font-family:courier; font-size:20px; font-weight:bold; color:black; background-color:#94d87c;">Tutorial</button>
             </a>
         </p>
     </div>
+    <script>
+        function handleChatFilterChange() {
+            var chatFilter = document.getElementById("chatFilter").value;
+            var nameSearch = document.getElementById("nameSearch");
+            if (chatFilter === "Non-contacts") {
+                nameSearch.disabled = true;
+                nameSearch.value = "";
+            } else {
+                nameSearch.disabled = false;
+            }
+        }
+    </script>
 </body>
