--- a/templates/tutorialPage.html
+++ b/templates/tutorialPage.html
@@ -1,35 +1,39 @@
-<body style="background-color:black;">
+<body style="position:flex; align-items:center; justify-content:center; background-color:black;">
+    <div style="position:relative; top:20; right:10; text-align:right; font-family:courier;">
+        <p style="font-size:20px; font-weight:bold; color:white;">Back to main page >>>
+            <a href="http://127.0.0.1:5000">
+                <button type="button" style="font-family:courier; font-size:20px; font-weight:bold; color:black; background-color:#94d87c;">Main Page</button>
+            </a>
+        </p>
+    </div>
     <div style="text-align:center; font-family:courier; color:white;">
         <br>
-        <div style="text-align:right; font-family:courier; padding-right:50px;">
-            <p style="font-size:20px; font-weight:bold; color:white;">Back to main page >>>
-                <a href="http://127.0.0.1:5000">
-                    <button type="button" style="font-family:courier; font-size:20px; font-weight:bold; color:black; background-color:#94d87c;">Main Page</button>
-                </a>
-            </p>
-        </div>
-        <br>
-        {% block title %}
         <img src="https://cdn-icons-png.flaticon.com/512/4406/4406170.png" width="100px">
         <p style="font-size:50px;">WHATSAPP CONTACTS DOWNLOADER</p>
-        {% endblock %}
-        {% block content %}
-        <br><br>
-        <p style="font-size:20px; font-weight:bold;">
-            <span style="color:#94d87c">>>></span> 1. Make sure you have Chrome browser installed on your computer
-        </p>
-        <br><br>
-        <p style="font-size:20px; font-weight:bold;">
-            <span style="color:#94d87c">>>></span> 2. Choose your contact filter
+        <!-- <p style="font-size:20px; font-weight:bold;">
+            <span style="color:#94d87c">>>></span> 1. Choose your contact filter
             <img src="https://images.news18.com/ibnlive/uploads/2022/05/whatsapp_filter-16523490453x2.jpg" width="300px">
             <img src="image/Screenshot 2023-11-18 231514.png" width="300px">
             <br>
             Choose "None" if you have non-business whatsapp account!
+        </p> -->
+        <!-- <p style="font-size:20px; font-weight:bold;">
+            <span style="color:#94d87c">>>></span> 2. Type a keyword in the search box
+            <img src="image/Screenshot 2023-11-20 150516.png" width="300px">
+            <img src="image/Screenshot 2023-11-20 150618.png" width="300px">
+            <br>
+            Empty your text box to get all contacts!
+        </p>-->
+        <p style="font-size:20px; font-weight:bold;">
+            <span style="color:#94d87c">>>></span> 1. Press the start button
+            <img src="image/Screenshot 2023-11-20 171602.png" width="300px">
         </p>
         <br><br>
         <p style="font-size:20px; font-weight:bold;">
-            <span style="color:#94d87c">>>></span> 3. New Chrome window will open automatically
-            <img src="image/Screenshot 2023-11-18 235202.png" width="300px">
+            <span style="color:#94d87c">>>></span> 3. After a loading time
+            <img src="image/Screenshot 2023-11-20 150907.png" width="300px">
+            , you will see a QR Code
+            <img src="image/Screenshot 2023-11-20 151633.png" width="300px">
         </p>
         <br><br>
         <p style="font-size:20px; font-weight:bold;">
@@ -38,23 +42,27 @@
         </p>
         <br><br>
         <p style="font-size:20px; font-weight:bold;">
-            <span style="color:#94d87c">>>></span> 5. Your whatsapp web will be controlled automatically. <br>The contact will be extracted as an Excel file<br> to your computer once the program is finished
+            <span style="color:#94d87c">>>></span> 5. Your whatsapp web will be controlled automatically
+            <img src="image/Screenshot 2023-11-20 151840.png" width="300px">
+        </p>
+        <br><br><br><br><br>
+        <p style="font-size:20px; font-weight:bold;">
+            <span style="color:#94d87c">>>></span> 6. Contacts will be downloaded as an Excel file<br>
+            <img src="image/Screenshot 2023-11-20 151928.png" width="500px">
         </p>
         <br><br>
         <p style="font-size:30px; font-weight:bold;">
             <span style="font-size:60px; color:red">WARNING!</span>
             <br>
-            <span style="color:red">DO NOT CLOSE THE WINDOW WHILE THE PROGRAM IS RUNNING!</span>
+            <span style="color:red">DO NOT DISCONNECT LINKED DEVICE WHILE THE PROGRAM IS RUNNING</span>
         </p>
-        {% endblock %}
         <br>
-        <div style="text-align:right; font-family:courier; padding-right:50px;">
-            <p style="font-size:20px; font-weight:bold; color:white;">Back to main page >>>
-                <a href="http://127.0.0.1:5000">
-                    <button type="button" style="font-family:courier; font-size:20px; font-weight:bold; color:black; background-color:#94d87c;">Main Page</button>
-                </a>
-            </p>
-        </div>
-        <br>
+    </div>
+    <div style="position:relative; bottom:10; right:10; text-align:right; font-family:courier;">
+        <p style="font-size:20px; font-weight:bold; color:white;">Back to main page >>>
+            <a href="http://127.0.0.1:5000">
+                <button type="button" style="font-family:courier; font-size:20px; font-weight:bold; color:black; background-color:#94d87c;">Main Page</button>
+            </a>
+        </p>
     </div>
 </body>
