--- a/templates/programExitErrorPage.html
+++ b/templates/programExitErrorPage.html
@@ -18,7 +18,7 @@
         </form>
         <div style="text-align:Center; font-family:courier; padding-right:50px;">
             <p style="font-size:20px; font-weight:bold; color:white;">Back to main page >>>
-                <a href="http://127.0.0.1:5000">
+                <a href="/">
                     <button type="button" style="font-family:courier; font-size:20px; font-weight:bold; color:black; background-color:#94d87c;">Main Page</button>
                 </a>
             </p>
