--- a/templates/tutorialPage.html
+++ b/templates/tutorialPage.html
@@ -1,7 +1,7 @@
 <body style="position:flex; align-items:center; justify-content:center; background-color:black;">
     <div style="position:relative; top:20; right:10; text-align:right; font-family:courier;">
         <p style="font-size:20px; font-weight:bold; color:white;">Back to main page >>>
-            <a href="http://127.0.0.1:5000">
+            <a href="/">
                 <button type="button" style="font-family:courier; font-size:20px; font-weight:bold; color:black; background-color:#94d87c;">Main Page</button>
             </a>
         </p>
@@ -10,20 +10,6 @@
         <br>
         <img src="https://cdn-icons-png.flaticon.com/512/4406/4406170.png" width="100px">
         <p style="font-size:50px;">WHATSAPP CONTACTS DOWNLOADER</p>
-        <!-- <p style="font-size:20px; font-weight:bold;">
-            <span style="color:#94d87c">>>></span> 1. Choose your contact filter
-            <img src="https://images.news18.com/ibnlive/uploads/2022/05/whatsapp_filter-16523490453x2.jpg" width="300px">
-            <img src="image/Screenshot 2023-11-18 231514.png" width="300px">
-            <br>
-            Choose "None" if you have non-business whatsapp account!
-        </p> -->
-        <!-- <p style="font-size:20px; font-weight:bold;">
-            <span style="color:#94d87c">>>></span> 2. Type a keyword in the search box
-            <img src="image/Screenshot 2023-11-20 150516.png" width="300px">
-            <img src="image/Screenshot 2023-11-20 150618.png" width="300px">
-            <br>
-            Empty your text box to get all contacts!
-        </p>-->
         <p style="font-size:20px; font-weight:bold;">
             <span style="color:#94d87c">>>></span> 1. Press the start button
             <img src="image/Screenshot 2023-11-20 171602.png" width="300px">
@@ -60,7 +46,7 @@
     </div>
     <div style="position:relative; bottom:10; right:10; text-align:right; font-family:courier;">
         <p style="font-size:20px; font-weight:bold; color:white;">Back to main page >>>
-            <a href="http://127.0.0.1:5000">
+            <a href="/">
                 <button type="button" style="font-family:courier; font-size:20px; font-weight:bold; color:black; background-color:#94d87c;">Main Page</button>
             </a>
         </p>
