--- a/templates/completedPage.html
+++ b/templates/completedPage.html
@@ -12,7 +12,7 @@
         <p style="font-size:30px; font-weight:bold; color:#94d87c;">Thank you for using our service!</p>
         <br><br>
         <p style="font-size:20px; font-weight:bold; color:white;">Download more contacts >>>
-            <a href="http://127.0.0.1:5000">
+            <a href="/">
                 <button type="button" style="font-family:courier; font-size:20px; font-weight:bold; color:black; background-color:#94d87c;">Main Page</button>
             </a>
         </p>
